<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_warehouse"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_warehouse"
            android:icon="@drawable/ic_menu_warehouse"
            android:title="@string/menu_warehouse" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_reporting"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_reporting"
            android:icon="@drawable/ic_menu_reporting"
            android:title="@string/menu_reporting" />
    </group>
</menu>