<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:padding="5dp"
        android:text="@string/addUserTitle"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/txt_password"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"

        android:textSize="15sp" />


    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/txt_confirm_password"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/dropdown_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_confirm_password"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/user_role"
        android:spinnerMode="dropdown"
        android:text="@string/user_role"
        android:layout_gravity="right"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnUserConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dropdown_role"

        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:minWidth="150dp"
        android:minHeight="80dp"
        android:padding="15dp"
        android:text="Confirm"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnUserCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dropdown_role"
        android:layout_toRightOf="@id/btnUserConfirm"

        android:layout_marginStart="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:minWidth="150dp"
        android:minHeight="80dp"
        android:padding="15dp"
        android:text="Cancel"
        android:textColor="#fff" />


</RelativeLayout>