<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.warehouse.WarehouseFragment">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:padding="5dp"
        android:text="@string/editItemTitle"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/txt_itemName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_above="@id/txt_barcode"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/itemName"
        android:inputType="textLongMessage"
        android:padding="15dp"

        android:textSize="15sp" />


    <EditText
        android:id="@+id/txt_barcode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@id/txt_itemDescription"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/barcode"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_itemDescription"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:layout_toRightOf="@id/txt_barcode"
        android:minWidth="48dp"
        android:minHeight="10dp"
        android:padding="10dp"
        android:text=">"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/txt_itemDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/itemDesc"
        android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txt_itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_itemDescription"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/itemPrice"
        android:inputType="numberDecimal"

        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txt_itemUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_itemDescription"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/txt_itemPrice"
        android:hint="@string/itemUnits"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="15sp" />



    <Button
        android:id="@+id/btnItemConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_itemUnits"

        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:minWidth="150dp"
        android:minHeight="80dp"
        android:padding="15dp"
        android:text="Confirm"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnItemCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_itemUnits"
        android:layout_toRightOf="@id/btnItemConfirm"

        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:minWidth="150dp"
        android:minHeight="80dp"
        android:padding="15dp"
        android:text="Cancel"
        android:textColor="#fff" />


</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>